--- a/src/MinerControllerFXML.fxml
+++ b/src/MinerControllerFXML.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" side="BOTTOM" style="-fx-background-color: b6ccef;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="Infinity" tabMaxWidth="Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" side="BOTTOM" style="-fx-background-color: b6ccef;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="Infinity" tabMaxWidth="Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <tabs>
-    <Tab text="Mining" fx:id="miningTab" >
+    <Tab fx:id="miningTab" text="Mining">
       <content>
-      	<fx:include fx:id="miningViewTab" source="MiningTab.fxml"/>
+      	<fx:include fx:id="miningViewTab" source="MiningTab.fxml" />
       </content>
     </Tab>
-    <Tab text="Wallet" fx:id="walletTab" >
+    <Tab fx:id="walletTab" text="Wallet">
       <content>
-      	<fx:include fx:id="walletViewTab" source="WalletTab.fxml"/>
+      	<fx:include fx:id="walletViewTab" source="WalletTab.fxml" />
       </content>
     </Tab>
   </tabs>
