--- a/src/WalletTab.fxml
+++ b/src/WalletTab.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="WalletView">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WalletController">
        <children>
           <Text layoutX="62.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Ethereum wallet balance:">
              <font>
@@ -24,9 +23,9 @@
                 <Font size="26.0" />
              </font>
           </Text>
-          <Button fx:id="ETHSendBtn" layoutX="116.0" layoutY="146.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
+          <Button fx:id="ETHSendBtn" layoutX="116.0" layoutY="146.0" mnemonicParsing="false" onAction="#sendETH" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
           <Button fx:id="ETHRecBtn" layoutX="222.0" layoutY="146.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
           <Button fx:id="BTCRecBtn" layoutX="222.0" layoutY="310.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
-          <Button fx:id="BTCSendBtn" layoutX="116.0" layoutY="310.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
+          <Button fx:id="BTCSendBtn" layoutX="116.0" layoutY="310.0" mnemonicParsing="false" onAction="#sendBTC" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
        </children>
 </AnchorPane>
