--- a/src/WalletTab.fxml
+++ b/src/WalletTab.fxml
@@ -13,19 +13,20 @@
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WalletController">
        <children>
-          <Text layoutX="62.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Ethereum wallet balance:">
+          <Text layoutX="62.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Ethereum wallet balance:    10.98ETH">
              <font>
                 <Font size="26.0" />
              </font>
           </Text>
-          <Text layoutX="62.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Bitcoin wallet balance:">
+          <Text layoutX="62.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Bitcoin wallet balance:   2.423BTC">
              <font>
                 <Font size="26.0" />
              </font>
           </Text>
-          <Button fx:id="ETHSendBtn" layoutX="116.0" layoutY="146.0" mnemonicParsing="false" onAction="#sendETH" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
-          <Button fx:id="ETHRecBtn" layoutX="222.0" layoutY="146.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
-          <Button fx:id="BTCRecBtn" layoutX="222.0" layoutY="310.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
+          <Button fx:id="ETHSendBtn" layoutX="115.0" layoutY="146.0" mnemonicParsing="false" onAction="#sendETH" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
+          <Button fx:id="ETHRecBtn" layoutX="222.0" layoutY="146.0" mnemonicParsing="false" onAction="#recETH" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
+          <Button fx:id="BTCRecBtn" layoutX="222.0" layoutY="310.0" mnemonicParsing="false" onAction="#recBTC" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
           <Button fx:id="BTCSendBtn" layoutX="116.0" layoutY="310.0" mnemonicParsing="false" onAction="#sendBTC" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
+      <Text fx:id="notification" layoutX="62.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" visible="false" wrappingWidth="343.7294921875" />
        </children>
 </AnchorPane>
