--- a/src/ExchangeTab.fxml
+++ b/src/ExchangeTab.fxml
@@ -12,21 +12,9 @@
 <?import javafx.scene.control.Label?>
 
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="WalletView">
-       <children>
-          <Text layoutX="62.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Ethereum wallet balance:">
-             <font>
-                <Font size="26.0" />
-             </font>
-          </Text>
-          <Text layoutX="62.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Bitcoin wallet balance:">
-             <font>
-                <Font size="26.0" />
-             </font>
-          </Text>
-          <Button fx:id="ETHSendBtn" layoutX="116.0" layoutY="146.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
-          <Button fx:id="ETHRecBtn" layoutX="222.0" layoutY="146.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
-          <Button fx:id="BTCRecBtn" layoutX="222.0" layoutY="310.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: ef8973;" text="Receive" />
-          <Button fx:id="BTCSendBtn" layoutX="116.0" layoutY="310.0" mnemonicParsing="false" prefWidth="80.0" style="-fx-background-color: b6e7c9;" text="Send" />
-       </children>
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ExchangeView">
+   <children>
+      <ComboBox fx:id="src" layoutX="122.0" layoutY="225.0" prefWidth="150.0" promptText="Exhange this" visibleRowCount="3" />
+      <ComboBox fx:id="dest" layoutX="523.0" layoutY="225.0" prefWidth="150.0" promptText="To this" visibleRowCount="3" />
+   </children>
 </AnchorPane>
