--- a/src/ExchangeTab.fxml
+++ b/src/ExchangeTab.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ExchangeView">
    <children>
       <Text layoutX="72.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Convert ETH to BTC">
@@ -24,29 +23,32 @@
             <Font size="26.0" />
          </font>
       </Text>
-      <TextField layoutX="452.0" layoutY="203.0" prefHeight="25.0" prefWidth="67.0" text="1" />
-      <Text layoutX="538.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ETH">
+      <TextField fx:id="input_ethTF" layoutX="600.0" layoutY="201.0" prefHeight="25.0" prefWidth="67.0" text="1" />
+      <Text layoutX="686.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ETH">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="329.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input:">
+      <Text layoutX="503.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input:">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="329.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Output:">
+      <Text layoutX="503.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Output:">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="538.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BTC">
+      <Text layoutX="686.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BTC">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField layoutX="452.0" layoutY="329.0" prefHeight="25.0" prefWidth="67.0" text="1" />
-      <Text layoutX="72.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current exchange rate:" />
-      <Button fx:id="ETHSendBtn" layoutX="79.0" layoutY="244.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="171.0" style="-fx-background-color: b6e7c9;" text="Submit!" />
+      <TextField fx:id="output_btcTF" layoutX="600.0" layoutY="297.0" prefHeight="25.0" prefWidth="67.0" />
+      <Text fx:id="eth_btcText" layoutX="72.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current exchange rate: 1ETH = " />
+      <Button fx:id="eth_btcSubmit" layoutX="267.0" layoutY="229.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="171.0" style="-fx-background-color: b6e7c9;" text="Submit">
+         <font>
+            <Font size="22.0" />
+         </font></Button>
    </children>
 </AnchorPane>
