Moved QRScanner into its own class and made code more modular and tidy. Added SettingsView and SettingsController, as well as the ability to scan in a new wallet address.(all done miles high lol)

--- a/src/main/resources/MinerControllerFXML.fxml
+++ b/src/main/resources/MinerControllerFXML.fxml
@@ -28,5 +28,10 @@
         <fx:include source="ExchangeTab.fxml" />
       </content>
     </Tab>
+    <Tab fx:id="settingsTab" text="Settings">
+      <content>
+        <fx:include source="SettingsTab.fxml" />
+      </content>
+    </Tab>
   </tabs>
 </TabPane>
