--- a/src/main/resources/ExchangeTab.fxml
+++ b/src/main/resources/ExchangeTab.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ExchangeView">
    <children>
-      <Text layoutX="72.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Convert ETH to BTC">
+      <Text layoutX="207.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Convert ETH to BTC">
          <font>
             <Font size="26.0" />
          </font>
@@ -45,10 +45,20 @@
          </font>
       </Text>
       <TextField fx:id="output_btcTF" layoutX="600.0" layoutY="297.0" prefHeight="9.0" prefWidth="87.0" />
-      <Text fx:id="eth_btcText" layoutX="72.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current exchange rate: 1ETH = " />
-      <Button fx:id="eth_btcSubmit" layoutX="267.0" layoutY="229.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="171.0" style="-fx-background-color: b6e7c9;" text="Submit">
+      <Text fx:id="eth_btcText" layoutX="207.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current exchange rate: 1ETH = " />
+      <Button fx:id="eth_btcSubmit" layoutX="207.0" layoutY="314.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="171.0" style="-fx-background-color: b6e7c9;" text="Submit">
          <font>
             <Font size="22.0" />
          </font></Button>
+       <ImageView fitHeight="94.0" fitWidth="91.0" layoutX="695.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
+           <image>
+               <Image url="@logo%20black.png" />
+           </image>
+       </ImageView>
+      <Text layoutX="92.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exchange">
+         <font>
+            <Font size="58.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
