--- a/src/main/resources/MiningTab.fxml
+++ b/src/main/resources/MiningTab.fxml
@@ -11,23 +11,34 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="MiningView">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MiningView">
   <children>
-    <Button fx:id="mineButton" layoutX="259.0" layoutY="200.0" mnemonicParsing="false" onAction="#mineButtonController" prefHeight="138.0" prefWidth="282.0" style="-fx-base: #b6e7c9" text="Start Mining">
+    <Button fx:id="mineButton" layoutX="103.0" layoutY="208.0" mnemonicParsing="false" onAction="#mineButtonController" prefHeight="102.0" prefWidth="280.0" style="-fx-base: #b6e7c9" text="Start Mining">
       <font>
         <Font size="24.0" />
       </font>
     </Button>
-    <Text layoutX="260.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unconfirmed Balance" wrappingWidth="279.7294921875">
+    <Text layoutX="447.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unconfirmed Balance" wrappingWidth="279.7294921875">
              <font>
                 <Font size="26.0" />
              </font></Text>
-          <Text fx:id="balanceText" layoutX="232.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="loading..." textAlignment="CENTER" wrappingWidth="334.5673828125">
+          <Text fx:id="balanceText" layoutX="419.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="loading..." textAlignment="CENTER" wrappingWidth="334.5673828125">
              <font>
                 <Font size="26.0" />
              </font>
           </Text>
           <Text fx:id="hashrateText" layoutX="14.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="current hashrate: loading..." />
-          <TextField fx:id="claymoreText" editable="false" layoutX="21.0" layoutY="366.0" prefHeight="25.0" prefWidth="759.0" promptText="Claymore Status" />
+          <TextField fx:id="claymoreText" editable="false" layoutX="45.0" layoutY="379.0" prefHeight="15.0" prefWidth="630.0" promptText="Claymore Status" />
+      <Text fx:id="walletText" layoutX="360.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="current wallet: " />
+      <ImageView fitHeight="94.0" fitWidth="91.0" layoutX="695.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@logo%20black.png" />
+          </image>
+      </ImageView>
+      <Text layoutX="92.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mining">
+         <font>
+            <Font size="58.0" />
+         </font>
+      </Text>
   </children>
 </AnchorPane>
