--- a/src/main/resources/SettingsTab.fxml
+++ b/src/main/resources/SettingsTab.fxml
@@ -13,9 +13,9 @@
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SettingsView">
    <children>
-      <Text layoutX="72.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings">
+      <Text layoutX="92.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings">
          <font>
-            <Font size="26.0" />
+            <Font size="58.0" />
          </font>
       </Text>
       <Text layoutX="72.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Convert BTC to ETH" visible="false">
@@ -23,10 +23,15 @@
             <Font size="26.0" />
          </font>
       </Text>
-      <Text fx:id="eth_btcText" layoutX="72.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change mining wallet">
+      <Text fx:id="eth_btcText" layoutX="206.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change mining wallet">
          <font>
             <Font size="19.0" />
          </font></Text>
-      <Button layoutX="578.0" layoutY="155.0" mnemonicParsing="false" onAction="#QRScanFrame" text="Change" />
+      <Button layoutX="524.0" layoutY="201.0" mnemonicParsing="false" onAction="#QRScanFrame" text="Change" />
+       <ImageView fitHeight="94.0" fitWidth="91.0" layoutX="695.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
+           <image>
+               <Image url="@logo%20black.png" />
+           </image>
+       </ImageView>
    </children>
 </AnchorPane>
