--- a/src/main/resources/SettingsTab.fxml
+++ b/src/main/resources/SettingsTab.fxml
@@ -23,7 +23,7 @@
             <Font size="26.0" />
          </font>
       </Text>
-      <Text fx:id="eth_btcText" layoutX="206.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change mining wallet">
+      <Text layoutX="206.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change mining wallet">
          <font>
             <Font size="19.0" />
          </font></Text>
