--- a/src/main/resources/com/isaiahminer/resources/ExchangeTab.fxml
+++ b/src/main/resources/com/isaiahminer/resources/ExchangeTab.fxml
@@ -11,7 +11,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ExchangeView">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.isaiahminer.controllers.ui.ExchangeView">
    <children>
       <Text layoutX="207.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Convert ETH to BTC">
          <font>
