--- a/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
+++ b/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
@@ -11,7 +11,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MiningView">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
+	fx:controller="com.isaiahminer.controllers.ui.MiningView">
   <children>
     <Button fx:id="mineButton" layoutX="103.0" layoutY="208.0" mnemonicParsing="false" onAction="#mineButtonController" prefHeight="102.0" prefWidth="280.0" style="-fx-base: #b6e7c9" text="Start Mining">
       <font>
@@ -43,8 +44,8 @@
       <TextField fx:id="hashrateTextfield" layoutX="103.0" layoutY="340.0" prefHeight="25.0" prefWidth="63.0" />
       <TextField fx:id="tempTextfield" layoutX="264.0" layoutY="340.0" prefHeight="25.0" prefWidth="63.0" />
       <TextField fx:id="fanTextfield" layoutX="427.0" layoutY="340.0" prefHeight="25.0" prefWidth="63.0" />
-      <Text layoutX="34.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hashrate\n(Mh/s)" />
-      <Text layoutX="175.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Temperature\n(C)" wrappingWidth="98.97265625" />
-      <Text layoutX="351.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fan Speed\n(%)" wrappingWidth="98.97265625" />
+      <Text layoutX="34.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${'Hashrate\n(Mh/s)'}" />
+      <Text layoutX="175.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${'Temperature\n(C)'}" wrappingWidth="98.97265625" />
+      <Text layoutX="351.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${'Fan Speed\n(%)'}" wrappingWidth="98.97265625" />
   </children>
 </AnchorPane>
