TabController is the correct name in MVC terms (fxml is a view)

--- a/src/main/resources/com/isaiahminer/resources/SettingsTab.fxml
+++ b/src/main/resources/com/isaiahminer/resources/SettingsTab.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.Label?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
-	fx:controller="com.isaiahminer.controllers.ui.SettingsView">
+	fx:controller="com.isaiahminer.controllers.ui.SettingsTabController">
    <children>
       <Text layoutX="92.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings">
          <font>
