--- a/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
+++ b/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.Label?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: b6ccef;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
-	fx:controller="com.isaiahminer.controllers.ui.MiningView">
+	fx:controller="com.isaiahminer.controllers.ui.MiningTabController">
   <children>
     <Button fx:id="mineButton" layoutX="103.0" layoutY="208.0" mnemonicParsing="false" onAction="#mineButtonController" prefHeight="102.0" prefWidth="280.0" style="-fx-base: #b6e7c9" text="Start Mining">
       <font>
