Proper exception handling

--- a/src/main/resources/com/isaiahminer/resources/MinerControllerView.fxml
+++ b/src/main/resources/com/isaiahminer/resources/MinerControllerView.fxml
@@ -10,16 +10,18 @@
       	<fx:include source="MiningTab.fxml" />
       </content>
     </Tab>
-    <!--<Tab fx:id="walletTab" text=" Wallet ">-->
-      <!--<content>-->
-      	<!--<fx:include source="WalletTab.fxml" />-->
-      <!--</content>-->
-    <!--</Tab>-->
-    <!--<Tab fx:id="exchangeTab" text=" Exchange ">-->
-      <!--<content>-->
-        <!--<fx:include source="ExchangeTab.fxml" />-->
-      <!--</content>-->
-    <!--</Tab>-->
+<!--
+    <Tab fx:id="walletTab" text=" Wallet ">
+      <content>
+      	<fx:include source="WalletTab.fxml" />
+      </content>
+    </Tab>
+    <Tab fx:id="exchangeTab" text=" Exchange ">
+      <content>
+        <fx:include source="ExchangeTab.fxml" />
+      </content>
+    </Tab>
+-->
     <Tab fx:id="settingsTab" text=" Settings ">
       <content>
         <fx:include source="SettingsTab.fxml" />
