--- a/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
+++ b/src/main/resources/com/isaiahminer/resources/MiningTab.fxml
@@ -33,7 +33,7 @@
 	<Text fx:id="walletText" layoutX="360.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="current wallet: " />
       <ImageView fitHeight="94.0" fitWidth="91.0" layoutX="695.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
           <image>
-              <Image url="@logo%20black.png" />
+              <Image url="@logo.png" />
           </image>
       </ImageView>
       <Text layoutX="92.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mining">
@@ -49,7 +49,7 @@
       <Text layoutX="351.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fan Speed (%)" wrappingWidth="80.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="487.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../Downloads/mario.gif" />
+            <Image url="@mario.gif" />
          </image>
       </ImageView>
       <Text fx:id="profitText" layoutX="14.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="daily profit: loading..." />
